<package format="2">
  <name>jason_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for jason_description</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <export>
    <architecture_independent />
  </export>
</package>
